--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "chai": "^1.9.0"
   },
   "dependencies": {
-    "event-stream": "^3.1.0",
+    "event-stream": "3.3.4",
     "gulp-util": "^2.2.14"
   },
   "bugs": {
