--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-rev-append",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Cache-busting plugin for gulp.",
   "main": "index.js",
   "repository": {
@@ -29,11 +29,12 @@
   ],
   "devDependencies": {
     "cucumber": "^0.4.0",
+    "vinyl": "2.2.0",
     "chai": "^1.9.0"
   },
   "dependencies": {
     "event-stream": "3.3.4",
-    "gulp-util": "^2.2.14"
+    "plugin-error": "1.0.1"
   },
   "bugs": {
     "url": "https://github.com/bustardcelly/gulp-rev-append/issues"
